# Minesweeper

./: .gitignore  CMakeLists.txt  run.sh
.cmake/api/v1/reply/: cache-v2-3b392cdb2cabe022f9f6.json  cmakeFiles-v1-010c1b4c3d2bb7ec0f7d.json  codemodel-v2-2e363f753b603314496a.json  directory-src.button-Debug-58898a4347fe0de72315.json  index-2022-09-21T06-39-05-0972.json  target-Minesweeper-Debug-4a5f682586b3f99e645f.json  target-button-Debug-85ba66fc3354bcbeddeb.json
assets/: border2x.xcf  border_hor.xcf  border_ver.xcf  corner_wide.xcf  corners.xcf  digits.xcf  faces.xcf  separator.xcf  tiles.xcf
src/: board.c  board.h  data.c  data.h  draw.c  draw.h  main.c  settings_view.c  settings_view.h  textures.c  textures.h  utils.c  utils.h
src/button/: CMakeLists.txt
src/button/src/: button.c  button.h
